cros:Fix DCHECK failure when dragging in a folder

In the new applist folders we re-use various components.

In AppsGridView we had a bool that was used to determine if we
should show suggested apps, but the bool did not check to see if
the AppsGridView was being used inside a folder.

This was causing a DCHECK failure because row was being computed as -1
when there were 2 items in a folder and a folder item is dragged to the
first position.

Bug: 817475
Change-Id: Ie50583e947f9b9b6ba37a536ae327f935531d35e
Reviewed-on: https://chromium-review.googlesource.com/941546
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540196}
Former-commit-id: 905ed37fda1270620613d34011aa1c340006d0b5